--- a/frontend/index.html
+++ b/frontend/index.html
@@ -638,20 +638,13 @@
     }
 
     .pitch {
-      background: linear-gradient(180deg, #F5F8FF 0%, #FFF5EC 100%);
-      border: 2px solid #E5E7EB;
+      background: url('./assets/fond-terrain.png') center / contain no-repeat;
       border-radius: 18px;
       padding: 16px;
       position: relative;
-    }
-
-    .pitch::before {
-      content: '';
-      position: absolute;
-      inset: 16px;
-      border: 2px dashed rgba(31,36,48,0.12);
-      border-radius: 14px;
-      pointer-events: none;
+      width: 100%;
+      height: min(70vh, 560px);
+      min-height: 480px;
     }
 
     .pitch-title {
@@ -661,31 +654,32 @@
     }
 
     .team-slots {
-      display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-      gap: 8px;
-      margin-bottom: 12px;
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
     }
 
     .team-slots.drag-over {
-      box-shadow: 0 0 0 2px rgba(255,122,26,0.25);
-      border-radius: 12px;
+      box-shadow: 0 0 0 3px rgba(255,122,26,0.25);
+      border-radius: 18px;
     }
 
     .slot {
-      background: rgba(255,255,255,0.8);
+      position: absolute;
+      width: 140px;
+      height: 44px;
+      background: rgba(255,255,255,0.92);
       border: 1.5px dashed #D1D5DB;
       border-radius: 12px;
-      min-height: 52px;
       display: grid;
       place-items: center;
       font-size: 0.8rem;
       color: var(--text-muted);
-      padding: 6px;
-      max-width: 100%;
+      padding: 6px 10px;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      pointer-events: auto;
     }
 
     .slot.filled {
@@ -700,6 +694,28 @@
       border-color: var(--brand);
       box-shadow: 0 0 0 2px rgba(255,122,26,0.2);
     }
+
+    #teamASlots .slot:nth-child(1) { left: 50%; top: 84%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(2) { left: 50%; top: 72%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(3) { left: 25%; top: 62%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(4) { left: 75%; top: 62%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(5) { left: 50%; top: 52%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(6) { left: 25%; top: 92%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(7) { left: 75%; top: 92%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(8) { left: 15%; top: 78%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(9) { left: 85%; top: 78%; transform: translate(-50%, -50%); }
+    #teamASlots .slot:nth-child(10) { left: 50%; top: 92%; transform: translate(-50%, -50%); }
+
+    #teamBSlots .slot:nth-child(1) { left: 50%; top: 16%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(2) { left: 50%; top: 28%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(3) { left: 25%; top: 38%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(4) { left: 75%; top: 38%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(5) { left: 50%; top: 48%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(6) { left: 25%; top: 8%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(7) { left: 75%; top: 8%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(8) { left: 15%; top: 22%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(9) { left: 85%; top: 22%; transform: translate(-50%, -50%); }
+    #teamBSlots .slot:nth-child(10) { left: 50%; top: 8%; transform: translate(-50%, -50%); }
 
     .compo-actions {
       display: flex;
@@ -718,6 +734,18 @@
         width: 94vw;
         height: 90vh;
         max-height: 90vh;
+      }
+
+      .pitch {
+        height: 60vh;
+        min-height: 420px;
+        background-size: contain;
+      }
+
+      .slot {
+        width: 120px;
+        height: 40px;
+        font-size: 0.75rem;
       }
     }
 
@@ -1697,13 +1725,22 @@
         `;
       };
 
-      teamASlots.innerHTML = compoState.teamA.length
-        ? compoState.teamA.map((playerId, idx) => renderSlot('teamA', playerId, idx)).join('')
-        : '<div class="helper-text">Déposez des joueurs ici.</div>';
+      const emptySlot = (teamKey, index) => `
+        <div class="slot" data-team="${teamKey}" data-index="${index}" title="">
+          Slot ${index + 1}
+        </div>
+      `;
 
-      teamBSlots.innerHTML = compoState.teamB.length
-        ? compoState.teamB.map((playerId, idx) => renderSlot('teamB', playerId, idx)).join('')
-        : '<div class="helper-text">Déposez des joueurs ici.</div>';
+      const buildSlots = (teamKey, assigned) => {
+        const base = Array.from({ length: 5 }, (_, idx) => emptySlot(teamKey, idx));
+        assigned.forEach((playerId, idx) => {
+          if (idx < base.length) base[idx] = renderSlot(teamKey, playerId, idx);
+        });
+        return base.join('');
+      };
+
+      teamASlots.innerHTML = buildSlots('teamA', compoState.teamA);
+      teamBSlots.innerHTML = buildSlots('teamB', compoState.teamB);
 
       saveBtn.disabled = !isCompoComplete();
 
